ansible/files/components/oidc-connect-proxy/network/oidc-connect-proxy-allow-reactive-resume-dev.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oidc-connect-proxy-allow-reactive-resume-dev
  namespace: shared-services
  annotations:
    cristex.io/source-service: reactive-resume-dev
    cristex.io/source-service-port: "3128"
  labels:
    app.kubernetes.io/name: oidc-connect-proxy
    app.kubernetes.io/part-of: cristex-platform
    app.kubernetes.io/managed-by: ansible
    cristex.io/bootstrap-writer: ansible
    cristex.io/component: oidc-connect-proxy
    cristex.io/desired-owner: argocd
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: oidc-connect-proxy
      app.kubernetes.io/part-of: cristex-platform
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cristexhub-dev
          podSelector:
            matchLabels:
              app.kubernetes.io/name: reactive-resume-dev
              app.kubernetes.io/part-of: cristexhub
      ports:
        - protocol: TCP
          port: 3128
